--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,21 @@ body{
 #gLogo{
     
     position: absolute;
-    left: 42%;
-    top: 270px;
+    left: 816.5px;
+    top: 200px;
 
 }
 
 #searchBox{
     position: absolute;
-    left: 32%;
-    top: 400px;
-    width: 550px;
+    left: 600px;
+    top: 330px;
+    width: 700px;
     height: 40px;
     border-radius: 30px;
     background-color: white;
+    border-width: 1px;
+    border-style: solid;
 
 
 }
@@ -27,10 +29,11 @@ body{
 .buttons{
 
     position: absolute;
-    left: 42%;
-    top: 480px;
+    left: 800px;
+    top: 430px;
     padding-left: 10px;
     padding-right: 10px;
+    
 
 
 
