--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,29 @@
 body{
 
     position: relative;
+    margin: 0;
+    padding: 0;
 }
+
+
+ul{
+    list-style: none;
+    float: right;
+}
+
+li{
+    display: inline-block;
+   
+    
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    margin-right: 10px;
+
+}
+
 
 
 #gLogo{
@@ -34,13 +56,33 @@ body{
     padding-left: 10px;
     padding-right: 10px;
     
+}
 
 
+
+.sBtn{
+    background-color: whitesmoke;
+    height: 40px;
+    border-style: none;
 
 }
 
-.sBtn{
+.sBtn :hover{
 
+    border-style: solid;
+}
+
+
+.navbar-bottom{
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 835px;
+    width: 100%;
+    height: 80px;
+    background-color: whitesmoke;
+    border-style: solid;
+    border-width: 1px;
 }
 
 @media only screen and (max-width: 768px){
@@ -67,3 +109,6 @@ body{
 
 
 }
+
+}
+
