--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,70 @@ body{
     padding-top: 10em;
 
 }
+
 .big1{
+    display: flex;
+    flex-direction: row;
+    background-color: khaki;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    background-color: darkcyan;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
     text-align: center;
+
+}
+
+#searchbox{
+    padding-bottom: 1em;
+    border-style: solid;
+    border-radius: 25px;
+    width: 500px;
+    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: gray;
+     
+}
+
+.s-icon{
+    align-items: flex-start;
+    width: 50px;
+    background-color: maroon;
+    
+}
+#s-box{
+    align-items: flex-end;
+    width: 200px;
+    height: 30px;
+    border-style: none;
+    background-color: hotpink;
+    
+
+}
+
+.buttons{
+    padding-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    text-align: center;
+    
+
+}
+
+.btn-a{
+
+    padding-right: 0.8em;
+    text-decoration: none;
+}
+
+.btn-inp{
+    width: 150px;
+    height: 30px;
+   background-color: #f8f9fa;
+   
+    border-style: none;
 
 }
 
