--- a/styles.css
+++ b/styles.css
@@ -32,49 +32,64 @@ body{
     width: 60%;
     margin-left:auto;
     margin-right: auto;
-    background-color: cyan;
     text-align: center;
     padding-top: 10em;
+    padding-bottom: 2em;
 
 }
 
 .big1{
     display: flex;
     flex-direction: row;
-    background-color: khaki;
-    width: 60%;
+    justify-content: flex-start;
+    border-style: solid;
+    border-color: grey;
+    border-width: 1px;
+    border-radius: 25px;
+    background-color: white;
+    width: 500px;
+    height: 35px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 1.5em;
-    padding-bottom: 1.5em;
-    text-align: center;
+   
 
 }
 
 #searchbox{
-    padding-bottom: 1em;
-    border-style: solid;
-    border-radius: 25px;
-    width: 500px;
-    height: 30px;
+    
+    width: 480px;
+    height: 35px;
     margin-left: auto;
     margin-right: auto;
-    background-color: gray;
+   
      
 }
 
 .s-icon{
-    align-items: flex-start;
-    width: 50px;
-    background-color: maroon;
+    
+    padding-left: 30px;
+    width: 40px;
+    height: 35px;
+    
     
 }
+#icon{
+
+    max-width:100%;
+    max-height:100%
+}
+input:focus {
+    outline:none;
+}
 #s-box{
-    align-items: flex-end;
-    width: 200px;
-    height: 30px;
+    background-color: white;
+    width: 400px;
+    height: 35px;
+    padding: 0;
     border-style: none;
-    background-color: hotpink;
+    text-decoration: none;
+
+   
     
 
 }
