--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body{
     border-width: 1px;
     border-radius: 25px;
     background-color: white;
-    width: 500px;
+    width: 45%;
     height: 35px;
     margin-left: auto;
     margin-right: auto;
